# NASA-ADC-24

./: .gitignore  README-dependencies.txt  README-running&poetry.txt  README.md  pyproject.toml
nadc2025/: __init__.py  config.py  dataset.csv  dataset_bonus.csv  libdata.py  libui.py  main.py
